# cs2-arb-dashboard

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
app/: config.py  main.py  models.py
app/clients/: odds_api_client.py
app/data/: cache.py  matcher.py  rate_limiter.py  team_aliases.json
app/engine/: detector.py
app/ingestion/: normalizer.py
cs2_arb/: __init__.py  config.py
cs2_arb/alerts/: alerter.py  new_market_detector.py  notifier.py
cs2_arb/api/: __init__.py  cache.py  matcher.py  odds.py  polymarket.py
cs2_arb/data/: __init__.py  blast_events.py
cs2_arb/engine/: __init__.py  detector.py  ev.py  tournament_detector.py
cs2_arb/ui/: __init__.py  arb_table.py  detail_view.py  tables.py  tournament_view.py
docs/: api_reference.md  architecture.md  deployment.md
src/: __init__.py
src/clients/: polymarket_client.py  polymarket_ws.py
src/cs2_arb/: __init__.py
tests/: conftest.py  test_alerter.py  test_arb_table.py  test_blast_events.py  test_cache_rate_limiter.py  test_config.py  test_config_module.py  test_detail_view.py  test_detector.py  test_ev_calc.py  test_matcher.py  test_models.py  test_new_market_detector.py  test_normalizer.py  test_notifier.py  test_odds_api_client.py  test_polymarket_client.py  test_polymarket_ws.py  test_tournament_detector.py  test_tournament_view.py
