[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2-arb-dashboard"
version = "0.1.0"
description = "CS2 Esports Arbitrage Dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "streamlit>=1.32.0",
    "streamlit-autorefresh>=1.0.1",
    "requests>=2.31.0",
    "py-clob-client>=0.14.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "cachetools>=5.3.0",
    "rapidfuzz>=3.6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-requests>=2.31.0",
    "types-cachetools>=5.3.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*", "utils*", "data*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["config", "src", "utils", "data", "app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "N802"]
"tests/*.py" = ["S101", "N802"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
# app.py uses streamlit which has no type stubs; exclude from strict checks
exclude = ["app\\.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# NOTE: threshold starts at 20 for scaffold-only codebase; increase to 80 as
# modules are implemented (tracked in follow-up issues).
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=20 --ignore=.git"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "setup.py",
    ".git/*",
    "conftest.py",
    # Scaffold files not yet testable — covered by downstream issues
    "app.py",
    "utils/*",
    "data/*",
]

[[tool.mypy.overrides]]
module = ["app.config", "app.models", "app.clients.odds_api_client"]
disable_error_code = ["misc", "untyped-decorator"]

[[tool.mypy.overrides]]
module = ["src.clients.polymarket_client"]
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = ["tests.*", "conftest"]
disable_error_code = ["untyped-decorator", "misc", "arg-type"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["app.data.cache"]
disable_error_code = ["import-untyped"]
