[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cs2-arb-dashboard"
version = "0.1.0"
requires-python = ">=3.11"
description = "CS2 Esports Arbitrage Dashboard — Polymarket vs Bookmakers"
readme = "README.md"
dependencies = [
    "streamlit>=1.32.0",
    "streamlit-autorefresh>=1.0.1",
    "pandas>=2.2.1",
    "requests>=2.31.0",
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
